fixed margin alignment at top of page

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   color: white;
   height: 300%;
   padding: .5% 0 .5% 1%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
 }
 
 @keyframes App-logo-spin {
