--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -3,6 +3,7 @@
   border: black 2px solid;
   color: white;
   padding: 0 0 0 1%;
+  margin-top: 3%;
 }
 
 .accordion-body {
